--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ body {
     <a href="index.html" class="active">Home</a>
   </div>
 
-  <a href="games">Games</a>
+  <a href="arcade">Arcade</a>
   
   <div class="topnav-right">
     <a href="utilities">Utilities</a>
