--- a/arcade/index.html
+++ b/arcade/index.html
@@ -84,9 +84,71 @@
         .game-list li:hover .game-title {
             color: yellow;
         }
+        .topnav {
+  position: relative;
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
+.topnav-centered a {
+  float: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.topnav-right {
+  float: right;
+}
+
+/* Responsive navigation menu (for mobile devices) */
+@media screen and (max-width: 600px) {
+  .topnav a, .topnav-right {
+    float: none;
+    display: block;
+  }
+  
+  .topnav-centered a {
+    position: relative;
+    top: 0;
+    left: 0;
+    transform: none;
+  }
     </style>
 </head>
 <body>
+    <div class="topnav">
+    
+  <div class="topnav-centered">
+    <a href="index.html" class="active">Arcade</a>
+  </div>
+
+  <a href="https://xandr215.github.io">Home</a>
+  
+  <div class="topnav-right">
+    <a href="xandr215.github.io/utilities">Utilities</a>
+  </div>
+</div>
     <div class="container">
         <div class="preview" id="preview">
             <img id="gameImage" src="" alt="Game Preview">
