--- a/arcade/index.html
+++ b/arcade/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" manifest="arcade.appcache">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="favicon.png">
     <title>Arcade</title>
     <style>
         body {
@@ -18,6 +19,7 @@
             justify-content: center;
             align-items: center;
         }
+
         a {
             text-decoration: none;
             color: white;
