--- a/utilities/index.html
+++ b/utilities/index.html
@@ -82,7 +82,7 @@ body {
     <a href="index.html" class="active">Utilities</a>
   </div>
 
-  <a href="https://xandr215.github.io/games">Games</a>
+  <a href="https://xandr215.github.io/arcade">Arcade</a>
   
   <div class="topnav-right">
     <a href="https://xandr215.github.io">Home</a>
