--- a/utilities/index.html
+++ b/utilities/index.html
@@ -92,7 +92,7 @@ body {
     
 <div class="utils" style="text-align: center;">
   <a href="numtools.html">NumberTools</a>
-  <a href="https://chatgenie-team.github.io">ChatGenie (not mine!)</a>
+  <a href="https://chatgem.github.io">ChatGem (not mine!)</a>
   <a href="chatcrawl">ChatCrawl</a>
   <a href="partialcalc.html">PartialCalc (not mine!)</a>
 </div>
