--- a/utilities/chatcrawl/index.html
+++ b/utilities/chatcrawl/index.html
@@ -79,7 +79,7 @@ body {
 <div class="topnav">
     
   <div class="topnav-centered">
-    <a href="xandr215.github.io/utilities/index.html" class="active">Utilities</a>
+    <a href="https://xandr215.github.io/utilities/index.html" class="active">Utilities</a>
   </div>
 
   <a href="https://xandr215.github.io/games">Games</a>
