--- a/index.html
+++ b/index.html
@@ -90,5 +90,9 @@ body {
   </div>
 </div>
     <h1 style="text-align: center;">Xandr215's Site</h1>
+    <p style="text-align: center;">I like messing with things and seeing how broken I can make them</p>
+    <p style="text-align: center;">Also an iOS beta tester, Minecraft player, and more</p>
+    <p style="text-align: center;">I work on many projects with my friends, like Squares Center and ChatGem with one, Squares Center Games as a development showcase for Squares Center upcoming games.</p>
+    <p style="text-align: center;">Check out the things on that navbar up there</p>
 </body>
 </html>
