--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 <style>
-body {
-  background: linear-gradient(to bottom right, #20b2aa, #00ff00);
+html, body {
+  height: 100%;
   margin: 0;
-  height: 100vh;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  background: linear-gradient(to bottom right, #20b2aa, #00ff00);
   color: white;
   font-family: "Ubuntu", Arial, sans-serif;
 }
@@ -70,40 +75,45 @@ body {
     transform: none;
   }
 }
-    h1 {
-        font-family: "Ubuntu", Arial, sans-serif;
-        text-align: center;
-    }
-    footer {
-        background-color: #333;
-        color: white;
-        padding: 20px;
-        text-align: center;
-        width: 100%;
-    }
+
+h1 {
+  font-family: "Ubuntu", Arial, sans-serif;
+  text-align: center;
+}
+
+.content {
+  flex: 1; /* Pushes the footer to the bottom */
+}
+
+footer {
+  background-color: #333;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  width: 100%;
+}
 </style>
 </head>
 <body>
 <div class="topnav">
-    
   <div class="topnav-centered">
     <a href="index.html" class="active">Home</a>
   </div>
-
   <a href="arcade">Arcade</a>
-  
   <div class="topnav-right">
     <a href="utilities">Utilities</a>
   </div>
 </div>
-    <h1 style="text-align: center;">Xandr215's Site</h1>
+<div class="content">
+    <h1>Xandr215's Site</h1>
     <p style="text-align: center;">I like messing with things and seeing how broken I can make them</p>
     <p style="text-align: center;">Also an iOS beta tester, Minecraft player, and more</p>
     <p style="text-align: center;">I work on many projects with my friends, like Squares Center and ChatGem with one, Squares Center Games as a development showcase for Squares Center upcoming games.</p>
     <p style="text-align: center;">Check out the things on that navbar up there</p>
+</div>
+<footer>
+    <p>Made by Xandr215</p>
+    <p><a href="https://steamcommunity.com/id/XGamez215/">Steam</a> | <a href="https://github.com/@Xandr215">GitHub</a> | <a href="https://discord.com/users/821127583017992215">Discord</a></p>
+</footer>
 </body>
-    <footer>
-        <p>Made by Xandr215</p>
-        <p><a href="https://steamcommunity.com/id/XGamez215/">Steam</a> | <a href="https://github.com/@Xandr215">GitHub</a> | <a href="https://discord.com/users/821127583017992215">Discord</a></p>
-    </footer>
 </html>
