--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script> <!-- Font Awesome for icons -->
 <style>
 html, body {
   height: 100%;
@@ -83,14 +84,32 @@ h1 {
 
 .content {
   flex: 1; /* Pushes the footer to the bottom */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 footer {
   background-color: #333;
   color: white;
-  padding: 20px;
+  height: 128px;
   text-align: center;
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+footer .icons a {
+  margin: 0 10px;
+  color: white;
+  text-decoration: none;
+  font-size: 24px;
+}
+
+footer .icons a:hover {
+  color: #04AA6D;
 }
 </style>
 </head>
@@ -112,8 +131,12 @@ footer {
     <p style="text-align: center;">Check out the things on that navbar up there</p>
 </div>
 <footer>
+    <div class="icons">
+        <a href="https://steamcommunity.com/id/XGamez215/" target="_blank"><i class="fab fa-steam"></i></a>
+        <a href="https://github.com/Xandr215" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://discord.com/users/821127583017992215" target="_blank"><i class="fab fa-discord"></i></a>
+    </div>
     <p>Made by Xandr215</p>
-    <p><a href="https://steamcommunity.com/id/XGamez215/">Steam</a> | <a href="https://github.com/@Xandr215">GitHub</a> | <a href="https://discord.com/users/821127583017992215">Discord</a></p>
 </footer>
 </body>
 </html>
