--- a/index.html
+++ b/index.html
@@ -101,11 +101,16 @@ footer {
   align-items: center;
 }
 
+footer .icons {
+  margin-bottom: 10px;
+}
+
 footer .icons a {
   margin: 0 10px;
   color: white;
   text-decoration: none;
   font-size: 24px;
+  display: inline-block;
 }
 
 footer .icons a:hover {
