--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script> <!-- Font Awesome for icons -->
 <style>
 html, body {
   height: 100%;
@@ -107,14 +106,17 @@ footer .icons {
 
 footer .icons a {
   margin: 0 10px;
-  color: white;
-  text-decoration: none;
-  font-size: 24px;
   display: inline-block;
 }
 
-footer .icons a:hover {
-  color: #04AA6D;
+footer .icons img {
+  height: 32px; /* Adjust size of the icons */
+  width: 32px;  /* Adjust size of the icons */
+}
+
+footer .icons a:hover img {
+  transform: scale(1.1); /* Slight zoom effect on hover */
+  transition: transform 0.2s ease;
 }
 </style>
 </head>
@@ -137,9 +139,9 @@ footer .icons a:hover {
 </div>
 <footer>
     <div class="icons">
-        <a href="https://steamcommunity.com/id/XGamez215/" target="_blank"><i class="fab fa-steam"></i></a>
-        <a href="https://github.com/Xandr215" target="_blank"><i class="fab fa-github"></i></a>
-        <a href="https://discord.com/users/821127583017992215" target="_blank"><i class="fab fa-discord"></i></a>
+        <a href="https://steamcommunity.com/id/XGamez215/" target="_blank"><img src="images/steam.png" alt="Steam"></a>
+        <a href="https://github.com/Xandr215" target="_blank"><img src="images/gh.png" alt="GitHub"></a>
+        <a href="https://discord.com/users/821127583017992215" target="_blank"><img src="images/discord.png" alt="Discord"></a>
     </div>
     <p>Made by Xandr215</p>
 </footer>
