--- a/utilities/chat.html
+++ b/utilities/chat.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
     <title>Xandr215's Chat</title>
-    <link rel="icon" type="image/x-icon" href="https://xandr215.github.io/images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/71400477?v=4">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
