--- a/utilities/partialcalc.html
+++ b/utilities/partialcalc.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>PartialCalc</title>
+    <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/71400477?v=4">
     <style>
         table {
             border: 1px solid black;
