--- a/index.html
+++ b/index.html
@@ -156,17 +156,23 @@ footer .icons a:hover img {
 function updateCountdown() {
     const countdownElement = document.getElementById('countdown');
     const now = new Date();
-    const newYearUTC6 = new Date(Date.UTC(2025, 0, 1, 6, 0, 0)); // Midnight UTC-6 on January 1, 2025
+    const currentYear = now.getFullYear();
+    const nextYear = now.getMonth() === 11 && now.getDate() > 25 ? currentYear + 1 : currentYear;
+    const newYearUTC6 = new Date(Date.UTC(nextYear, 0, 1, 6, 0, 0)); // Midnight UTC-6 on January 1
     const timeDiff = newYearUTC6 - now;
 
-    if (timeDiff > 0) {
-        const days = Math.floor(timeDiff / (1000 * 60 * 60 * 24));
-        const hours = Math.floor((timeDiff % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-        const minutes = Math.floor((timeDiff % (1000 * 60 * 60)) / (1000 * 60));
-        const seconds = Math.floor((timeDiff % (1000 * 60)) / 1000);
-        countdownElement.textContent = `Countdown to New Year (UTC-6): ${days}d ${hours}h ${minutes}m ${seconds}s`;
+    if (now.getMonth() === 11 && now.getDate() > 25) {
+        if (timeDiff > 0) {
+            const days = Math.floor(timeDiff / (1000 * 60 * 60 * 24));
+            const hours = Math.floor((timeDiff % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+            const minutes = Math.floor((timeDiff % (1000 * 60 * 60)) / (1000 * 60));
+            const seconds = Math.floor((timeDiff % (1000 * 60)) / 1000);
+            countdownElement.textContent = `Countdown to New Year (UTC-6): ${days}d ${hours}h ${minutes}m ${seconds}s`;
+        } else {
+            countdownElement.textContent = "Happy New Year!";
+        }
     } else {
-        countdownElement.textContent = "Happy New Year!";
+        countdownElement.textContent = ""; // Hide countdown
     }
 }
 
