--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
+<meta name="description" content="GitHub Pages site for GitHub user Xandr215, with games and utilities.">
     <title>Xandr215's Site</title>
     <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/71400477?v=4">
     <script src="swreg.js" defer></script>
