--- a/index.html
+++ b/index.html
@@ -147,9 +147,7 @@ footer .icons a:hover img {
 </div>
 <footer>
     <div class="icons">
-        <a href="https://steamcommunity.com/id/XGamez215/" target="_blank"><img src="images/steam.png" alt="Steam"></a>
-        <a href="https://github.com/Xandr215" target="_blank"><img src="images/gh.png" alt="GitHub"></a>
-        <a href="https://discord.com/users/821127583017992215" target="_blank"><img src="images/discord.png" alt="Discord"></a>
+        <a href="https://steamcommunity.com/id/XGamez215/" target="_blank"><img src="images/steam.png" alt="Steam"></a> | <a href="https://github.com/Xandr215" target="_blank"><img src="images/gh.png" alt="GitHub"></a> | <a href="https://discord.com/users/821127583017992215" target="_blank"><img src="images/discord.png" alt="Discord"></a>
     </div>
     <p>Made by Xandr215</p>
 </footer>
