--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@ body {
 }
 
 .clock {
-  position: absolute;
-  top: 0;
-  right: 10px;
+  margin-top: 10px;
   color: white;
   font-size: 16px;
   font-family: "Ubuntu Mono", monospace;
+  text-align: right;
+  padding-right: 10px;
 }
 
 @media screen and (max-width: 600px) {
@@ -145,8 +145,8 @@ footer .icons a:hover img {
   <div class="topnav-right">
     <a href="utilities">Utilities</a>
   </div>
-  <div class="clock" id="clock"></div>
 </div>
+<div class="clock" id="clock"></div>
 <div class="content">
     <h1>Xandr215's Site</h1>
     <p style="text-align: center;">I like messing with things and seeing how broken I can make them</p>
