--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@ body {
 .clock {
   margin-top: 10px;
   color: white;
-  font-size: 16px;
-  font-family: "Ubuntu Mono", monospace;
+  font-size: 20px;
+  font-family: "Ubuntu";
   text-align: right;
   padding-right: 10px;
 }
