--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ body {
 }
 
 h1 {
-  font-family: "Ubuntu", Arial, sans-serif;
+  font-family: "Ubuntu Mono", Arial, sans-serif;
   text-align: center;
 }
 
