--- a/utilities/index.html
+++ b/utilities/index.html
@@ -1,100 +1,121 @@
 <!DOCTYPE html>
-<html manifest="util.appcache", lang="en-us">
+<html lang="en" manifest="utilities.appcache">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta charset="UTF-8">
-    <title>Xandr215's Utilities</title>
-    <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/71400477?v=4">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="manifest" href="manifest.json">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-<style>
-body {
-  background: linear-gradient(to bottom right, #20b2aa, #00ff00);
-  margin: 0;
-  height: 100vh;
-  color: white;
-  font-family: "Ubuntu", Arial, sans-serif;
-}
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/u/71400477?v=4">
+    <title>Xandr215's Utilities</title>
+    <style>
+        body {
+            background: linear-gradient(to bottom right, #20b2aa, #0f0);
+            margin: 0;
+            height: 100vh;
+            font-family: 'Ubuntu', Arial, Helvetica, sans-serif;
+            color: #fff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
-.topnav {
-  position: relative;
-  overflow: hidden;
-  background-color: #333;
-}
+        a {
+            text-decoration: none;
+            color: white;
+        }
 
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
+        a:visited {
+            color: white;
+        }
 
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
+        .container {
+            display: flex;
+            width: 80%;
+            height: 80%;
+        }
 
-.topnav a.active {
-  background-color: #04AA6D;
-  color: white;
-}
+        .preview {
+            flex: 3;
+            width: 1280;
+            height: 960;
+            aspect-ratio: 4 / 3;
+            border: 2px solid white;
+            margin-right: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: rgba(255, 255, 255, 0.1);
+        }
 
-.topnav-centered a {
-  float: none;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
+        .preview img {
+            max-width: 100%;
+            max-height: 100%;
+            width: auto;
+            height: auto;
+            display: none;
+        }
 
-.topnav-right {
-  float: right;
-}
+        .util-list {
+            flex: 2;
+            text-align: left;
+        }
 
-/* Responsive navigation menu (for mobile devices) */
-@media screen and (max-width: 600px) {
-  .topnav a, .topnav-right {
-    float: none;
-    display: block;
-  }
-  
-  .topnav-centered a {
-    position: relative;
-    top: 0;
-    left: 0;
-    transform: none;
-  }
-}
-    h1 {
-        font-family: "Ubuntu Mono", Arial, sans-serif;
-        text-align: center;
-    }
-</style>
+        .util-list h2 {
+            font-size: 48px;
+            margin-bottom: 20px;
+        }
+
+        .util-list ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        .util-list li {
+            font-size: 24px;
+            margin-bottom: 10px;
+            cursor: pointer;
+            padding: 5px;
+        }
+
+        .util-list li:hover {
+            background-color: rgba(255, 255, 255, 0.2);
+        }
+
+        .util-list li:hover .util-title {
+            color: yellow;
+        }
+    </style>
 </head>
 <body>
-<div class="topnav">
-    
-  <div class="topnav-centered">
-    <a href="index.html" class="active">Utilities</a>
-  </div>
-
-  <a href="https://xandr215.github.io/arcade">Arcade</a>
-  
-  <div class="topnav-right">
-    <a href="https://xandr215.github.io">Home</a>
-  </div>
-</div>
-    <h1>Xandr215's Utilities</h1>
-    
-<div class="utils" style="text-align: center;">
-  <a href="numtools.html">NumberTools</a>
-  <a href="https://chatgem.github.io">ChatGem (not mine!)</a>
-  <a href="chatcrawl">ChatCrawl</a>
-  <a href="partialcalc.html">PartialCalc (not mine!)</a>
-</div>
+    <div class="container">
+        <div class="preview" id="preview">
+            <img id="utilImage" src="" alt="Utility Preview">
+        </div>
+        <div class="util-list">
+            <h2>Utilities</h2>
+            <ul id="utilList">
+                <li data-img="img/numtools.png"><a href="numtools.html" data-img="img/numtools.png" target="_blank">NumTools</a></li>
+                <li data-img="img/cg.png"><a href="https://chatgem.github.io" data-img="img/cg.png" target="_blank">ChatGem</a></li>
+                <li data-img="img/cc.png"><a href="chatcrawl/index.html" data-img="img/cc.png" target="_blank">ChatCrawl</a></li>
+                <li data-img="img/partialcalc.png"><a href="partialcalc.html" data-img="img/partialcalc.png" target="_blank">PartialCalc</a></li>
+            </ul>
+        </div>
+    </div>
+    <script>
+        document.querySelectorAll('#utilList li').forEach(item => {
+            item.addEventListener('mouseover', event => {
+                const imgSrc = event.target.getAttribute('data-img');
+                const img = document.getElementById('utilImage');
+                img.src = imgSrc;
+                img.style.display = 'block';
+            });
+            item.addEventListener('mouseleave', event => {
+                const img = document.getElementById('utilImage');
+                img.style.display = 'none';
+            });
+        });
+    </script>
 </body>
 </html>
