--- a/utilities/partialcalc.html
+++ b/utilities/partialcalc.html
@@ -4,6 +4,12 @@
     <title>PartialCalc</title>
     <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/71400477?v=4">
     <style>
+        body {
+            background: linear-gradient(to bottom right, #20b2aa, #0f0);
+            margin: 0;
+            height: 100vh;
+            font-family: 'Ubuntu', Arial, Helvetica, sans-serif;
+        }
         table {
             border: 1px solid black;
             margin-left: auto;
