--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
-<meta name="description" content="GitHub Pages site for GitHub user Xandr215, with games and utilities.">
-    <title>Xandr215's Site</title>
+<meta name="description" content="GitHub Pages site for GitHub user usrx215, with games and utilities.">
+    <title>usrx's site</title>
     <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/71400477?v=4">
     <script src="swreg.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -148,7 +148,7 @@ footer .icons a:hover img {
 </div>
 <div class="clock" id="clock"></div>
 <div class="content">
-    <h1>Xandr215's Site</h1>
+    <h1>Xander's Site</h1>
     <p style="text-align: center;">I like messing with things and seeing how broken I can make them</p>
     <p style="text-align: center;">Also an iOS beta tester, Minecraft player, and more</p>
     <p style="text-align: center;">I work on many projects with my friends, like Squares Center and ChatGem with one, Squares Center Games as a development showcase for Squares Center upcoming games.</p>
@@ -158,9 +158,9 @@ footer .icons a:hover img {
 </div>
 <footer>
     <div class="icons">
-        <a href="https://steamcommunity.com/id/XGamez215/" target="_blank"><img src="images/steam.png" alt="Steam"></a> | <a href="https://github.com/Xandr215" target="_blank"><img src="images/gh.png" alt="GitHub"></a> | <a href="https://discord.com/users/821127583017992215" target="_blank"><img src="images/discord.png" alt="Discord"></a> | <a href="https://twitch.tv/Xandr215" target="_blank"><img src="images/twitch.png" alt="Twitch"></a> | <a href="https://youtube.com/@useracc215" target="_blank"><img src="images/yt.png" alt="YouTube"></a>
+        <a href="https://steamcommunity.com/id/XGamez215/" target="_blank"><img src="images/steam.png" alt="Steam"></a> | <a href="https://github.com/usrx215" target="_blank"><img src="images/gh.png" alt="GitHub"></a> | <a href="https://discord.com/users/821127583017992215" target="_blank"><img src="images/discord.png" alt="Discord"></a> | <a href="https://twitch.tv/usrx215" target="_blank"><img src="images/twitch.png" alt="Twitch"></a> | <a href="https://youtube.com/@useracc215" target="_blank"><img src="images/yt.png" alt="YouTube"></a>
     </div>
-    <p>Made by Xandr215</p>
+    <p>Made by Xander (usrx215)</p>
 </footer>
 <script>
 function updateCountdown() {
