--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ footer .icons a:hover img {
 </div>
 <footer>
     <div class="icons">
-        <a href="https://steamcommunity.com/id/XGamez215/" target="_blank"><img src="images/steam.png" alt="Steam"></a> | <a href="https://github.com/usrx215" target="_blank"><img src="images/gh.png" alt="GitHub"></a> | <a href="https://discord.com/users/821127583017992215" target="_blank"><img src="images/discord.png" alt="Discord"></a> | <a href="https://twitch.tv/usrx215" target="_blank"><img src="images/twitch.png" alt="Twitch"></a> | <a href="https://youtube.com/@useracc215" target="_blank"><img src="images/yt.png" alt="YouTube"></a>
+        <a href="https://steamcommunity.com/id/usrx215/" target="_blank"><img src="images/steam.png" alt="Steam"></a> | <a href="https://github.com/usrx215" target="_blank"><img src="images/gh.png" alt="GitHub"></a> | <a href="https://discord.com/users/821127583017992215" target="_blank"><img src="images/discord.png" alt="Discord"></a> | <a href="https://twitch.tv/usrx215" target="_blank"><img src="images/twitch.png" alt="Twitch"></a> | <a href="https://youtube.com/@useracc215" target="_blank"><img src="images/yt.png" alt="YouTube"></a>
     </div>
     <p>Made by Xander (usrx215)</p>
 </footer>
